--- a/templates/accounts/accounts_form.html
+++ b/templates/accounts/accounts_form.html
@@ -1,11 +1,13 @@
 {% extends "base/base.html" %}
 {% block content %}
-<main class="center-content">
-    <h2>accounts_form</h2>
+<main class="accounts-form-wrapper center-content">
+    <h2 class="section-title">로그인 / 회원가입</h2>
     <form method="POST">
         {% csrf_token %}
         {{form.as_p}}
-        <button>submit</button>
+        <p class="btn-area">
+            <button class="default-btn reverse">작성 완료</button>
+        </p>
     </form>
 </main>
 {% endblock %}
