"update" footer 수정

--- a/static/style/global.css
+++ b/static/style/global.css
@@ -296,7 +296,8 @@ main{
 
 footer{
 	margin-top: 15rem;
-	padding:3rem;
+	padding:8rem 0 5rem;
+	text-align: center;
 	background-color: var(--color-light-grey);
 }
 
