--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 {% load blog_tags %}
 {% block content %}
-<main class="post-detail-wrapper">
+<main class="post-list-wrapper">
     <section class="search-area">
         <h2 class="ir-hidden">포스트 검색</h2>
         <form class="center-content">
