--- a/static/style/global.css
+++ b/static/style/global.css
@@ -27,6 +27,10 @@
 	margin:0 auto;
 }
 
+.hidden{
+	display: none;
+}
+
 .ir-hidden{
 	position: absolute;
 	left: -9999px;
@@ -34,6 +38,15 @@
 	width: 1px;
 	height: 1px;
 	overflow: hidden;
+}
+
+@keyframes fadeIn {
+	from{
+		opacity: 0;
+	}
+	to{
+		opacity: 1;
+	}
 }
 
 html{
@@ -502,7 +515,6 @@ footer{
 	flex-grow: 1;
 	width: 100%;
 	padding:2rem;
-	resize: none;
 	border-color: var(--color-dark-grey);
 	border-radius: .5rem;
 }
@@ -748,6 +760,22 @@ footer{
 	background-color: var(--color-white);
 	box-shadow: 0 0 1rem rgba(0,0,0,0.1);
 	border-radius: .5rem;
+}
+
+.userhome-wrapper .recommend-area{
+	padding:5rem;
+	text-align: right;
+	animation: fadeIn .5s ease-in-out;
+	overflow: hidden;
+}
+
+.userhome-wrapper .recommend-area textarea{
+	display: block;
+	width: 100%;
+	padding-bottom: 2rem;
+	line-height: 1.5;
+	border:none;
+	outline: none;
 }
 
 .userhome-wrapper .flex-area{
