--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -17,7 +17,7 @@
                 <div class="carousel-item {% if forloop.first %}active{% endif %}">
                     {% trans_promo_query promotion as promo_query %}
                     <a class="promo-banner" href="{% url 'post_list' %}{{promo_query}}">
-                        <img src="{% static "assets/banner/" %}{{promotion.promo_code}}.png" class="d-block w-100" alt="{{promotion_promo_code}}">
+                        <img src="{% static "assets/banner/" %}{{promotion.promo_code}}.jpg" class="d-block w-100" alt="{{promotion_promo_code}}">
                         <div class="text">
                             <pre class="center-content">{{promotion.title}}</pre>
                         </div>
