--- a/static/style/global.css
+++ b/static/style/global.css
@@ -165,6 +165,7 @@ main{
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+	background-color: var(--color-white);
 }
 
 .post-list>li img{
@@ -254,6 +255,7 @@ main{
 	border-radius: .5rem;
 	transition: all .2s ease-in-out;
 	overflow: hidden;
+	background-color: var(--color-white);
 }
 
 .comment-list>li:hover{
