--- a/templates/accounts/mypage.html
+++ b/templates/accounts/mypage.html
@@ -25,9 +25,9 @@
                     <span>{{profile.introduce}}</span>
                 </p>
             </div>
-            <div>
-                <a href="{% url "update_password" %}">비밀번호 수정</a>
-                <a href="{% url "update_profile" %}">프로필 수정</a>
+            <div class="btn-area">
+                <a class="default-btn" href="{% url "update_password" %}">비밀번호 수정</a>
+                <a class="default-btn" href="{% url "update_profile" %}">프로필 수정</a>
             </div>
         </div>
     </section>
