--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,7 +7,7 @@
     <title>Blog</title>
     <link rel="stylesheet" href="{% static 'style/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'style/reset.css' %}">
-    <link rel="stylesheet" href="{% static 'style/global.css' %}">
+    <link rel="stylesheet" href="{% static 'style/common.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
 </head>
