"update" 글감추천 프롬포트 수정

--- a/templates/accounts/userhome.html
+++ b/templates/accounts/userhome.html
@@ -127,7 +127,7 @@
                     만약 처음 내놓은 답변이 <틀린답변예시>와 같은 내용일 경우 다시 고민해줘.
                     네가 참조할 변수들은 아래와 같아.
 
-                    <카테고리>취미, 여행, IT, 음식</카테고리>
+                    <카테고리>취미, 여행, IT, 음식, 식물, 동물</카테고리>
 
                     <답변예시>
                     안녕하세요 000님! 블로그씨의 새로운 취미는 다꾸랍니다~ 취미 부자인 내가 하는 취미들을 사진과 함께 공유해주세요~
