--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -24,7 +24,7 @@
         </li>
         {% else %}
         <li>
-            <a href="{% url "post_list" %}">리스트</a>
+            <a href="{% url "post_list" %}">검색</a>
         </li>
         <li>
             <a href="{% url "signup" %}">회원가입</a>
